syntax = "proto3";
package sensors;
option go_package="./sensorpb";

service Sensor{
  rpc TempSensor(SensorRequest) returns (stream SensorResponse) {};
  rpc HumiditySensor(SensorRequest) returns (stream SensorResponse) {};
}

message SensorRequest {}

message SensorResponse {
  int64 value = 1;
}
